--- a/modules/website/ui/link/style.css
+++ b/modules/website/ui/link/style.css
@@ -1,3 +1,12 @@
 .link {
-  color: #4297f5;
+  color: hsl(212, 90%, 60%);
+  text-decoration: none;
+
+  &:active {
+    color: hsl(212, 90%, 80%);
+  }
+
+  &:visited {
+    color: hsl(242, 90%, 60%);
+  }
 }
