--- a/modules/website/style.css
+++ b/modules/website/style.css
@@ -9,8 +9,25 @@ body {
   font-family: Unicode;
   font-style: normal;
   font-weight: 400;
-  src: url(./fonts/Unicode/Unicode.eot) format("eot"),
-       url(./fonts/Unicode/Unicode.woff2) format("woff2"),
+  src: url(./fonts/Unicode/Unicode.woff2) format("woff2"),
        url(./fonts/Unicode/Unicode.woff) format("woff"),
        url(./fonts/Unicode/Unicode.ttf) format("truetype")
+}
+
+@font-face {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 400;
+  src: url(./fonts/Montserrat/Regular/Montserrat Regular.woff2) format("woff2"),
+       url(./fonts/Montserrat/Regular/Montserrat Regular.woff) format("woff"),
+       url(./fonts/Montserrat/Regular/Montserrat Regular.ttf) format("truetype")
+}
+
+@font-face {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 700;
+  src: url(./fonts/Montserrat/Bold/Montserrat Bold.woff2) format("woff2"),
+       url(./fonts/Montserrat/Bold/Montserrat Bold.woff) format("woff"),
+       url(./fonts/Montserrat/Bold/Montserrat Bold.ttf) format("truetype")
 }
