--- a/modules/website/style.css
+++ b/modules/website/style.css
@@ -8,6 +8,7 @@ body {
 @font-face {
   font-family: Unicode;
   font-style: normal;
+  font-display: swap;
   font-weight: 400;
   src: url(./fonts/Unicode/Unicode.woff2) format("woff2"),
        url(./fonts/Unicode/Unicode.woff) format("woff"),
@@ -17,6 +18,7 @@ body {
 @font-face {
   font-family: Montserrat;
   font-style: normal;
+  font-display: swap;
   font-weight: 400;
   src: url(./fonts/Montserrat/Regular/Montserrat Regular.woff2) format("woff2"),
        url(./fonts/Montserrat/Regular/Montserrat Regular.woff) format("woff"),
@@ -26,6 +28,7 @@ body {
 @font-face {
   font-family: Montserrat;
   font-style: normal;
+  font-display: swap;
   font-weight: 700;
   src: url(./fonts/Montserrat/Bold/Montserrat Bold.woff2) format("woff2"),
        url(./fonts/Montserrat/Bold/Montserrat Bold.woff) format("woff"),
